fix button in safari and refresh page on mobile

--- a/app/assets/stylesheets/tutorials/all.scss
+++ b/app/assets/stylesheets/tutorials/all.scss
@@ -38,6 +38,9 @@ p {
       &.active {
         background-color: #00a7cd;
       }
+      &:focus {
+        outline: none;
+      }
     }
   }
 }
